@@ -4,7 +4,7 @@
 
 import pytest
 
-from astroid import builder
+from astroid import bases, builder, nodes
 from astroid.exceptions import InferenceError
 
 
@@ -23,3 +23,50 @@ def test_infer_typevar() -> None:
     )
     with pytest.raises(InferenceError):
         call_node.inferred()
+
+
+class TestTypingAlias:
+    def test_infer_typing_alias(self) -> None:
+        """
+        Test that _alias() calls can be inferred.
+        """
+        node = builder.extract_node(
+            """
+            from typing import _alias
+            x = _alias(int, float)
+            """
+        )
+        assert isinstance(node, nodes.Assign)
+        assert isinstance(node.value, nodes.Call)
+        inferred = next(node.value.infer())
+        assert isinstance(inferred, nodes.ClassDef)
+        assert len(inferred.bases) == 1
+        assert inferred.bases[0].name == "int"
+
+    @pytest.mark.parametrize(
+        "alias_args",
+        [
+            "",  # two missing arguments
+            "int",  # one missing argument
+            "int, float, tuple",  # one additional argument
+        ],
+    )
+    def test_infer_typing_alias_incorrect_number_of_arguments(
+        self, alias_args: str
+    ) -> None:
+        """
+        Regression test for: https://github.com/pylint-dev/astroid/issues/2513
+
+        Test that _alias() calls with the incorrect number of arguments can be inferred.
+        """
+        node = builder.extract_node(
+            f"""
+            from typing import _alias
+            x = _alias({alias_args})
+            """
+        )
+        assert isinstance(node, nodes.Assign)
+        assert isinstance(node.value, nodes.Call)
+        inferred = next(node.value.infer())
+        assert isinstance(inferred, bases.Instance)
+        assert inferred.name == "_SpecialGenericAlias"
